Updated SpringProject5 with Services layers and added JPA dependency to POM.xml

--- a/projects/SpringProject5_Challenge/src/main/resources/application.properties
+++ b/projects/SpringProject5_Challenge/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 ## MySQL config
-#spring.datasource.url=jdbc:mysql://localhost:3306/spring_projects?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.username=root
-#spring.datasource.password=1234
-#spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_projects?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # MongoDB config
 spring.data.mongodb.host=localhost
