--- a/projects/SpringProject5_Challenge/src/main/resources/application.properties
+++ b/projects/SpringProject5_Challenge/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # MongoDB config
