--- a/projects/SpringProject5_Challenge/src/main/resources/application.properties
+++ b/projects/SpringProject5_Challenge/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-## MySQL config
+# Server config
+server.port=8081 
+
+# MySQL config
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_projects?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
